Clype : Websocket connection build